# hrms-lite

./: README.md  docker-compose.yml  env.example  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  attendance.py  employees.py
backend/app/config/: __init__.py  database.py  logging_config.py  settings.py
backend/app/core/: __init__.py  exceptions.py
backend/app/middleware/: __init__.py  cors.py  error_handler.py  request_middleware.py
backend/app/models/: __init__.py  attendance.py  employee.py
backend/app/schemas/: attendance.py  common.py  employee.py
backend/app/services/: __init__.py  attendance.py  base.py  employee.py
backend/scripts/: dev_seed_data.py  seed_employeesdata.py
docs/: DEPLOYMENT.md  SETUP_GUIDE.md
frontend/: .dockerignore  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/constants/: attendance.ts
frontend/src/context/: SidebarContext.tsx
frontend/src/hooks/: useDebouncedValue.ts
frontend/src/icons/: index.ts
frontend/src/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx  Backdrop.tsx
frontend/src/pages/: NotFound.tsx
frontend/src/providers/: QueryProvider.tsx
frontend/src/schemas/: attendanceSchema.ts  employeeSchema.ts
frontend/src/services/: axios.ts
frontend/src/types/: alert.types.ts  attendance.ts  (+5 more)
(+34 files in other folders)
